[tool.poetry]
name = "asyncpgx"
version = "1.1.2"
description = "User-friendly extensions for asyncpg"
authors = ["Vladislav Laukhin <laukhin97@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/laukhin/asyncpgx"
repository = "https://github.com/laukhin/asyncpgx"
documentation = "https://laukhin.github.io/asyncpgx/index.html"
license = "Apache-2.0"
keywords = ["postgresql", "asyncio", "asyncpg"]

[tool.poetry.dependencies]
python = "^3.6"
asyncpg = ">=0.21,<0.25"

[tool.poetry.dev-dependencies]
pylint = "^2.9.6"
mypy = "^0.910"
docformatter = "^1.4"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-asyncio = "^0.15.1"
sphinx = "^4.1.2"
sphinx-rtd-theme = "^0.5.2"

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
  )/
)
'''

[tool.poetry.extras]
format = ["black", "isort"]

[tool.isort]
line_length = 120
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
no_lines_before = ['STDLIB', 'LOCALFOLDER']
known_third_party = [
    'pytest',
]
known_local_folder = []
multi_line_output = 3
lines_after_imports = 2

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
