[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "asyncpgx"
version = "1.1.3"
description = "User-friendly extensions for asyncpg"
authors = ["Vladislav Laukhin <laukhin97@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/laukhin/asyncpgx"
repository = "https://github.com/laukhin/asyncpgx"
documentation = "https://laukhin.github.io/asyncpgx/index.html"
license = "Apache-2.0"
keywords = ["postgresql", "asyncio", "asyncpg"]

[tool.poetry.dependencies]
python = ">=3.6,<=3.10"
asyncpg = ">=0.21,<0.25"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
mypy = "^0.910"
docformatter = "^1.4"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.15.1"
sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"

[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
  )/
)
'''

[tool.poetry.extras]
format = ["black", "isort"]

[tool.isort]
line_length = 120
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
no_lines_before = ['STDLIB', 'LOCALFOLDER']
known_third_party = [
    'pytest',
]
known_local_folder = []
multi_line_output = 3
lines_after_imports = 2

[tool.mypy]
python_version = 3.9
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
allow_redefinition = true
disallow_incomplete_defs = true

[tool.pylint.format]
max-line-length = 120

[tool.pylint.master]
extension-pkg-whitelist = ['pydantic', 'asyncpg']

[tool.pylint.messages_control]
disable = [
    'print-statement',
    'parameter-unpacking',
    'unpacking-in-except',
    'old-raise-syntax',
    'backtick',
    'long-suffix',
    'old-ne-operator',
    'old-octal-literal',
    'import-star-module-level',
    'non-ascii-bytes-literal',
    'raw-checker-failed',
    'bad-inline-option',
    'locally-disabled',
    'file-ignored',
    'suppressed-message',
    'useless-suppression',
    'deprecated-pragma',
    'use-symbolic-message-instead',
    'apply-builtin',
    'basestring-builtin',
    'buffer-builtin',
    'cmp-builtin',
    'coerce-builtin',
    'execfile-builtin',
    'file-builtin',
    'long-builtin',
    'raw_input-builtin',
    'reduce-builtin',
    'standarderror-builtin',
    'unicode-builtin',
    'xrange-builtin',
    'coerce-method',
    'delslice-method',
    'getslice-method',
    'setslice-method',
    'no-absolute-import',
    'old-division',
    'dict-iter-method',
    'dict-view-method',
    'next-method-called',
    'metaclass-assignment',
    'indexing-exception',
    'raising-string',
    'reload-builtin',
    'oct-method',
    'hex-method',
    'nonzero-method',
    'cmp-method',
    'input-builtin',
    'round-builtin',
    'intern-builtin',
    'unichr-builtin',
    'map-builtin-not-iterating',
    'zip-builtin-not-iterating',
    'range-builtin-not-iterating',
    'filter-builtin-not-iterating',
    'using-cmp-argument',
    'eq-without-hash',
    'div-method',
    'idiv-method',
    'rdiv-method',
    'exception-message-attribute',
    'invalid-str-codec',
    'sys-max-int',
    'bad-python3-import',
    'deprecated-string-function',
    'deprecated-str-translate-call',
    'deprecated-itertools-function',
    'deprecated-types-field',
    'next-method-defined',
    'dict-items-not-iterating',
    'dict-keys-not-iterating',
    'dict-values-not-iterating',
    'deprecated-operator-function',
    'deprecated-urllib-function',
    'xreadlines-attribute',
    'deprecated-sys-function',
    'exception-escape',
    'comprehension-escape',
    'too-few-public-methods',
    'bad-continuation',
    'logging-fstring-interpolation',
    'no-self-use',
    'duplicate-code',
]
